# codechat-eval

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
scripts/: download.py  filter.py  semantic.py  semantics.py  syntax.py
scripts/utils/: cache.py  console.py  display.py  progress.py  types.py
src/: ds.py  filter.py  main.py  semantic.py  syntax.py
src/utils/: __init__.py  cache.py  console.py  display.py  ds.py  misc.py  progress.py  types.py
