[project]
name = "codechat-eval"
version = "0.1.0"
description = "Qualitative analysis of prompt-code pairs from CodeChat-V2.0 dataset"
readme = "README.md"
authors = [{ name = "darragh0" }]
license = "MIT"
keywords = ["evaluation", "vibe-coding", "codechat", "llm"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
requires-python = ">=3.13"
dependencies = [
  "annotated-types>=0.7.0",
  "datasets>=4.5.0",
  "fasttext-predict>=0.9.2.4",
  "ollama>=0.5.0",
  "pandas>=2.0.0",
  "radon>=6.0.0",
  "rich>=14.3.1",
]

[project.urls]
Homepage = "https://github.com/darragh0/codechat-eval?tab=readme-ov-file#"
Repository = "https://github.com/darragh0/codechat-eval"
Documentation = "https://github.com/darragh0/codechat-eval?tab=readme-ov-file#"

[dependency-groups]
dev = ["deptry>=0.24.0", "mypy>=1.19.1", "ruff>=0.14.14", "typ>=0.11.0"]
